feat(api): namespace database routes
